# cookiecutter-pylibrary

./: .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  README.rst  cookiecutter.json  pylibrary.py  pyproject.toml
hooks/: post_gen_project.py
tests/: conftest.py  test_render_ci_cd.py  test_render_github_actions.py  test_render_post_gen_hook.py  test_render_pyproject_toml.py  test_render_python_yml.py
{{cookiecutter.repo_name}}/: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  CHANGELOG.rst  CONTRIBUTING.rst  README.rst  codecov.yml  noxfile.py  pyproject.toml  tox.ini
{{cookiecutter.repo_name}}/.github/workflows/: docs.yml  licenses.yml  publish.yml  python.yml  tests.yml
{{cookiecutter.repo_name}}/.gitlab/: dependabot.yml
{{cookiecutter.repo_name}}/.gitlab/templates/: dependabot.yml  licenses.yml  publish.yml  python.yml  tests.yml
{{cookiecutter.repo_name}}/ci/: bootstrap.py
{{cookiecutter.repo_name}}/ci/templates/: .gitlab-ci.yml
{{cookiecutter.repo_name}}/ci/templates/.github/workflows/: github-actions.yml  github-actions.yml.jinja
{{cookiecutter.repo_name}}/docs/source/: conf.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/: cli.py
{{cookiecutter.repo_name}}/tests/: test_{{cookiecutter.package_name}}.py
